--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "start": "jekyll serve --incremental",
     "build": "npm run tex",
     "tex": "npm run tex:display; npm run tex:inline",
-    "tex:display": "ls src/tex/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > _includes/math-display/$(basename ${texfile%.tex}).html; done",
-    "tex:inline": "ls src/tex/inline/*.tex | while read texfile; do cat $texfile | katex > _includes/math-inline/$(basename ${texfile%.tex}).html; done"
+    "tex:display": "ls src/tex/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > _includes/math/display/$(basename ${texfile%.tex}).html; done",
+    "tex:inline": "ls src/tex/inline/*.tex | while read texfile; do cat $texfile | katex > _includes/math/inline/$(basename ${texfile%.tex}).html; done"
   },
   "repository": {
     "type": "git",
